add new page madinat-alkhayr

--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
                         <div class="dropdown-menu m-0">
                             <a href="album.html" class="dropdown-item">البوم الصور </a>
                             <a href="#" class="dropdown-item">الفديوهات</a>
+                            <a href="#" class="dropdown-item">الأخبار</a>
                         </div>
                     </div>
                     <div class="nav-item dropdown">
@@ -294,13 +295,12 @@
             <div class="row g-4 portfolio-container">
                 <div class="col-lg-4 col-md-6 py-3 portfolio-item first wow zoomIn" data-wow-delay="0.1s">
                     <div class="position-relative rounded overflow-hidden">
-                        <img class="img-fluid w-100" src="img/images/Projects/2-2-1.png.webp" alt="">
+                        <img class="img-fluid w-100" src="img/images/Projects/2024-638553628873905114-390.jpeg" alt="">
                         <div class="portfolio-overlay">
-                            <a class="btn btn-light" href="img/images/Projects/2-2-1.png.webp" data-lightbox="portfolio"><i
-                                    class="fa fa-plus fa-2x text-primary"></i></a>
+                            <a class="btn btn-light" href="img/images/Projects/2024-638553628873905114-390.jpeg" data-lightbox="portfolio"></a>
                             <div class="mt-auto">
-                                <small class="text-white"><i class="fa fa-folder me-2"></i>عن المشروع</small>
-                                <a class="h5 d-block text-white mt-1 mb-0" href="">اسم المشروع</a>
+                                <a href="madinat-alkhayr.html"><small class="text-white"><i class="fa fa-folder me-2"></i> </small></a>
+                                <a class="h5 d-block text-white mt-1 mb-0" href="madinat-alkhayr.html">مدينة الخير</a>
                             </div>
                         </div>
                     </div>
@@ -310,8 +310,7 @@
                     <div class="position-relative rounded overflow-hidden">
                         <img class="img-fluid w-100" src="img/images/Projects/3-3.png.webp" alt="">
                         <div class="portfolio-overlay">
-                            <a class="btn btn-light" href="img/images/Projects/3-3.png.webp" data-lightbox="portfolio"><i
-                                    class="fa fa-plus fa-2x text-primary"></i></a>
+                            <a class="btn btn-light" href="img/images/Projects/3-3.png.webp" data-lightbox="portfolio"></a>
                             <div class="mt-auto">
                                 <small class="text-white"><i class="fa fa-folder me-2"></i>عن المشروع</small>
                                 <a class="h5 d-block text-white mt-1 mb-0" href="">اسم المشروع</a>
@@ -324,8 +323,7 @@
                     <div class="position-relative rounded overflow-hidden">
                         <img class="img-fluid w-100" src="img/images/Projects/7-6-2.png.webp" alt="">
                         <div class="portfolio-overlay">
-                            <a class="btn btn-light" href="img/images/Projects/7-6-2.png.webp" data-lightbox="portfolio"><i
-                                    class="fa fa-plus fa-2x text-primary"></i></a>
+                            <a class="btn btn-light" href="img/images/Projects/7-6-2.png.webp" data-lightbox="portfolio"></a>
                             <div class="mt-auto">
                                 <small class="text-white"><i class="fa fa-folder me-2"></i>عن المشروع</small>
                                 <a class="h5 d-block text-white mt-1 mb-0" href="">اسم المشروع</a>
@@ -338,8 +336,7 @@
                     <div class="position-relative rounded overflow-hidden">
                         <img class="img-fluid w-100" src="img/images/Projects/shefaa.jpeg" alt="">
                         <div class="portfolio-overlay">
-                            <a class="btn btn-light" href="img/images/Projects/shefaa.jpeg" data-lightbox="portfolio"><i
-                                    class="fa fa-plus fa-2x text-primary"></i></a>
+                            <a class="btn btn-light" href="img/images/Projects/shefaa.jpeg" data-lightbox="portfolio"></a>
                             <div class="mt-auto">
                                 <small class="text-white"><i class="fa fa-folder me-2"></i>عن المشروع</small>
                                 <a class="h5 d-block text-white mt-1 mb-0" href="">اسم المشروع</a>
@@ -352,8 +349,7 @@
                     <div class="position-relative rounded overflow-hidden">
                         <img class="img-fluid w-100" src="img/images/Initiatives/2-6.png" alt="">
                         <div class="portfolio-overlay">
-                            <a class="btn btn-light" href="img/images/Initiatives/2-6.png" data-lightbox="portfolio"><i
-                                    class="fa fa-plus fa-2x text-primary"></i></a>
+                            <a class="btn btn-light" href="img/images/Initiatives/2-6.png" data-lightbox="portfolio"></a>
                             <div class="mt-auto">
                                 <small class="text-white"><i class="fa fa-folder me-2"></i>عن المشروع</small>
                                 <a class="h5 d-block text-white mt-1 mb-0" href="">اسم المشروع</a>
@@ -366,11 +362,10 @@
                     <div class="position-relative rounded overflow-hidden">
                         <img class="img-fluid w-100" src="img/images/Initiatives/9073b9f9-4b95-438b-9f63-53857c93e7aa.jpg" alt="">
                         <div class="portfolio-overlay">
-                            <a class="btn btn-light" href="img/images/Initiatives/9073b9f9-4b95-438b-9f63-53857c93e7aa.jpg" data-lightbox="portfolio"><i
-                                    class="fa fa-plus fa-2x text-primary"></i></a>
+                            <a class="btn btn-light" href="img/images/Initiatives/9073b9f9-4b95-438b-9f63-53857c93e7aa.jpg" data-lightbox="portfolio"></a>
                             <div class="mt-auto">
-                                <small class="text-white"><i class="fa fa-folder me-2"></i> كرتونة رمضان</small>
-                                <a class="h5 d-block text-white mt-1 mb-0" href="">كرتونه الخير</a>
+                                <a href="photo-kirtunat-alkhayr.html"><small class="text-white"><i class="fa fa-folder me-2"></i></small></a>
+                                <a class="h5 d-block text-white mt-1 mb-0" href="photo-kirtunat-alkhayr.html">كرتونه الخير</a>
                             </div>
                         </div>
                     </div>
@@ -395,34 +390,32 @@
                     <div class="causes-item d-flex flex-column bg-white border-top border-5 border-primary rounded-top overflow-hidden h-100">
                         <div class="text-center p-4 pt-0">
                             <div class="d-inline-block bg-primary text-white rounded-bottom fs-5 pb-1 px-3 mb-4">
-                                <small>علاج مرضى الأورام</small>
+                                <small> مشروع مدينة الخير</small>
                             </div>
                             <h5 class="mb-3" style="
                                             background-color: #ededed;
                                             margin: 0px;
                                             padding: 10px;
                                             border-radius: 9px;">
-                                            علاج مرضى الأورام
+                                            مشروع إنشاء مجمعات صناعية تشمل العديد من المجالات الحرفية
                                             </h5>
-                            <p>
-                                متوسط الجرعة 500  
-                            </p>
+                            <p></p>
                             <div class="causes-progress bg-light p-3 pt-2">
                                 <div class="d-flex justify-content-between">
-                                    <p class="text-dark">£10,000 <small class="text-body">الهدف</small></p>
-                                    <p class="text-dark">£8,542 <small class="text-body">تم توفير</small></p>
+                                    <p class="text-dark">£1,000,000 <small class="text-body">الهدف</small></p>
+                                    <p class="text-dark">£0 <small class="text-body">تم توفير</small></p>
                                 </div>
                                 <div class="progress">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
-                                        <span>80%</span>
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
+                                        <span>0%</span>
                                     </div>
                                 </div>
                             </div>
                         </div>
                         <div class="position-relative mt-auto">
-                            <img class="img-fluid" src="img/images/activte/20230215123435.jpg" alt="">
+                            <img class="img-fluid" src="img/images/activte/2024-638553628873905114-390.jpeg" alt="">
                             <div class="causes-overlay">
-                                <a class="btn btn-outline-primary" href="">
+                                <a class="btn btn-outline-primary" href="madinat-alkhayr.html">
                                     أقراء المزيد
                                     <div class="d-inline-flex btn-sm-square bg-primary text-white rounded-circle ms-2">
                                         <i class="fa fa-arrow-left"></i>
