add page blog and blog-2

--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
                         <div class="dropdown-menu m-0">
                             <a href="album.html" class="dropdown-item">البوم الصور </a>
                             <a href="#" class="dropdown-item">الفديوهات</a>
-                            <a href="#" class="dropdown-item">الأخبار</a>
+                            <a href="blog.html" class="dropdown-item">الأخبار</a>
+                            <a href="blog-2.html" class="dropdown-item">2الاخبار</a>
                         </div>
                     </div>
                     <div class="nav-item dropdown">
@@ -285,9 +286,9 @@
                                     ">
                 <div class="col-12 text-center">
                     <ul class="list-inline mb-5" id="portfolio-flters">
-                        <li class="btn px-3 pe-4 active" data-filter="*" style="position: relative; top: 20px; font-weight: bold;">الكل</li>
-                        <li class="btn px-3 pe-4" data-filter=".first"   style="position: relative; top: 20px; font-weight: bold;">مشروعات</li>
-                        <li class="btn px-3 pe-4" data-filter=".second"  style="position: relative; top: 20px; font-weight: bold;">مبادرات</li>
+                        <li class="btn px-3 pe-4 active" data-filter="*">الكل</li>
+                        <li class="btn px-3 pe-4" data-filter=".first">مشروعات</li>
+                        <li class="btn px-3 pe-4" data-filter=".second">مبادرات</li>
                     </ul>
                 </div>
             </div>
