--- a/madinat-alkhayr.html
+++ b/madinat-alkhayr.html
@@ -91,7 +91,7 @@
                         <div class="dropdown-menu m-0">
                             <a href="album.html" class="dropdown-item">البوم الصور </a>
                             <a href="#" class="dropdown-item">الفديوهات</a>
-                            <a href="#" class="dropdown-item">الأخبار</a>
+                            <a href="blog.html" class="dropdown-item">الأخبار</a>
                         </div>
                     </div>
                     <div class="nav-item dropdown">
@@ -142,7 +142,7 @@
     <!-- Page Header End -->
 
     <!-- Madinat Start -->
-    <div class="container-xxl py-5">
+    <div class="container-xxl py-2">
         <div class="container">
             <div class="col-lg-12 wow fadeInUp" data-wow-delay="0.5s">
                 <div class="h-100">
@@ -154,20 +154,107 @@
                         </div> -->
                 </div>
 
-                <!-- Word-->
-                <div class="py-5 word">
-                    <div class="">
-                        <h4 class="mb-5 py-3" style="text-align: center;"> </h4>
-                        <p class="mb-5" style="margin: 10px; padding: 10px; font-size: 17px;">
-                        
-                        </p>
+            <!-- Word-->
+            <div class="py-3 word">
+                <div class="mb-3">
+                    <h4 class="mb-2" style="text-align: center; color: #0441ed;">مشروع مدينة الخير لجمعية مهندسى البترول والتعدين والغاز (SPE) </h4>
+                    <h5 class="mb-2" style="text-align: center; color: #0441ed;">مشروع إنشاء مجمعات صناعية </h5>
+                    <h6 class="mb-2" style="text-align: center; color: #0441ed;"> تشمل العديد من المجالات الحرفية </h6>
+                    <h6 class="mb-2" style="text-align: center; color: #0441ed;"> من ( اخشاب، وتشكيل معادن، ملابس . .... الخ )
+                    لفتح فرص عمل للشباب
+                    </h6>
+                    <p class="mb-3" style="margin: 10px; padding: 10px; font-size: 17px;">
+                    إن رسالة الجامعية تدور حول تطبيق وتحقيق المعني الشامل لحقوق الإنسان على أرض الواقع، والذي لا يتمثل فقط في تأمين حيات
+                    كريمة له في أرض وطنه أينما حل، بل أيضاً في تأمين وضعه كفرد منتج نافع لمجتمعه في كل وقت وضمان إعادته سريعاً الى المسار
+                    القويم حال انحرافه عنه .
+                    </p>
+                </div>
+
+                <hr>
+                <h5 class="mb-3" style="color: #f8020298; text-decoration: underline;"> <small><i class="fas fa-pen"></i></small> التعريف بالمشروع، واسباب نشأة فكرته: </h5>
+                <p class="mb-3" style="margin: 10px; padding: 10px; font-size: 17px;">
+                    من هذا المنطق تبنت الجمعية فكرة إنشاء مشروع إنتاجي شامل، يغلب التوظيف فيه على مستوى التشغيل للمواطنين المفرج عنهم بعد
+                    قضاء فترات العقوبات المحكوم عليهم بها في القضايا المختلفة.
+                    هؤلاء المواطنون مهددون غالباً بالعودة إلى المسار المنحرف، حتى وإن كان ذلك ضد رغبتهم، وذلك في ظل محدودية فرص كسب الرزق
+                    بشكل مشروع، خاصة وأن المجتمع المحيط بهم غالباً ما يكون رافضاً لاندماجهم فيه، خوفاً من التعامل معهم يسبب ماضيهم الجنائي
+                    الأمر الذي يؤدي بالضرورة إلى عودتهم للمسار المظلم من جديد
+                </p>
+                <hr>
+
+                <h5 class="mb-3" style="color: #f8020298; text-decoration: underline;"> <small><i class="fas fa-pen"></i></small> فكرة عامة حول المشروع: </h5>
+                <p class="mb-3" style="margin: 10px; padding: 10px; font-size: 17px;"><i class="fas fa-check"></i> 
+                    تتلخص فكرة المشروع في إنشاء مجمعات صناعية على الأراضي التي تخصصها الدولة للجمعية، تشمل العديد من المجالات الحرفية من
+                    أخشاب، وتشكيل معادن، وماتيس، كمجالات يحتاجها المجتمع، ويتقنها المواطنون المستهدفون من إنشاء المشروع ساء من واقع مهنهم
+                    الأساسية وسيكونون هم مشرفوا مجموعات العمل، أو من واقع ما تلقوه من تدريب مهني ضمن برامج التأهيل المعدة لهم داخل مؤسسات
+                    الاحتجاز.
+                </p>
+
+                <p class="mb-2" style="margin: 10px; padding: 10px; font-size: 17px;"><i class="fas fa-check"></i>
+                    ويتم إنشاء الورش كاملة التجهيز في كافة المجالات الحرفية على أرض المشروع، كما سيتم إنشاء وحدات سكنية للعاملين. وأسرهم
+                    القاطنين بعيداً عن مواقع العمل، نظير استقطاعات بسيرة من دخلهم مقابل مصروفات صيانة الوحدات.
+                </p>
+                <p class="mb-2" style="margin: 10px; padding: 10px; font-size: 17px;"><i class="fas fa-check"></i>
+                    كما تقترح أن تكون فترة المتابعة الأمنية للمفرج عنهم تحت إشراف قسم الشرطة التابع له موقع العمل، وفي هذا توفير الكثير من
+                    الوقت ووقاية للعاملين من مواطن الشبهات.
+                </p>
+                <p class="mb-2" style="margin: 10px; padding: 10px; font-size: 17px;"><i class="fas fa-check"></i>
+                    يتضمن المشروع مراكز تدريب في نفس مجالات العمل لرفع كفاءة الملتحقين بالوظائف المهنية أو استكمال برامجهم التأهيلية، وتدريب
+                    مجموعات جديدة من أجل رفع الطاقة الاستيعابية والكفاءة الإنتاجية للمشروع.
+                </p>
+                <p class="mb-2" style="margin: 10px; padding: 10px; font-size: 17px;"><i class="fas fa-check"></i>
+                    بقدر ما يخصص للجمعية من أراض، بقدر ما تتكرر نسخ المشروع، أملاً في أكبر تغطية ممكنة المحافظات مصر.
+                </p>
+                <h6 class="mb-2" > والمزيد من التفاصيل، فإن مدينة الخير هي مجتمع متكامل يشمل: </h6>
+                <div class="row gy-2 gx-4 mb-4" style="text-align: right;">
+                    <div class="col-sm-6">
+                        <p class="mb-0"><i class="fa fa-arrow-left text-primary me-2"></i> ٤٨ وحدة سكنية </p>
                     </div>
-                    <hr>
+                    <div class="col-sm-6">
+                        <p class="mb-0"><i class="fa fa-arrow-left text-primary me-2"></i> الورش </p>
                     </div>
-                  </div>
+                    <div class="col-sm-6">
+                        <p class="mb-0"><i class="fa fa-arrow-left text-primary me-2"></i> خدمات (الصيدلية - سوبر ماركت - عيادة) </p>
+                    </div>
+                    <div class="col-sm-6">
+                        <p class="mb-0"><i class="fa fa-arrow-left text-primary me-2"></i> ملابس </p>
+                    </div>
+                    <div class="col-sm-6">
+                        <p class="mb-0"><i class="fa fa-arrow-left text-primary me-2"></i> ملاعب ومساحات خضراء </p>
+                    </div>
+                    <div class="col-sm-6">
+                        <p class="mb-0"><i class="fa fa-arrow-left text-primary me-2"></i> تشكيل المعادن</p>
+                    </div>
+                    <div class="col-sm-6">
+                        <p class="mb-0"><i class="fa fa-arrow-left text-primary me-2"></i> مركز تدريب </p>
+                    </div>
+                    <div class="col-sm-6">
+                        <p class="mb-0"><i class="fa fa-arrow-left text-primary me-2"></i> أخشاب </p>
+                    </div>
+                </div>
+                <hr>
+
+                <h5 class="mb-3" style="color: #f8020298; text-decoration: underline;"> <small><i class="fas fa-pen"></i></small> مزايا المشروع: </h5>
+                <p class="mb-1" style="margin: 10px; padding: 10px; font-size: 17px;">
+                    1- تحقيق رسالة المؤسسة من خلال تطبيق المعنى الشامل لمفهوم "حثوث الإنسان" (إنسان مكرم في كل وقت نافع
+                    المجتمعه على الدوام عائد دائما إلى المسار القويم حال زلل قدمه عنه)
+                </p>
+                <p class="mb-1" style="margin: 10px; padding: 10px; font-size: 17px;">
+                    2- حماية المواطنين المفرج عنهم من رفض المجتمع لهم، ووقاية المجتمع من عودتهم إلى عالم الجريمة من جديد.
+                </p>
+                <p class="mb-1" style="margin: 10px; padding: 10px; font-size: 17px;">
+                    3- توفير فرص عمل حقيقية لفئة من الناس تتضاءل فرصهم في الحصول على العمل في ظروف طبيعية، ومن ثم الاسهام في تقليل نسب
+                    البطالة في المجتمع.
+                </p>
+                <p class="mb-1" style="margin: 10px; padding: 10px; font-size: 17px;">
+                    4- نجاح العشروع، يخلق نموذجا يحتذى في استغلال الموارد المتاحة، ويفتح الطريق لتكرار التجربة في مجالات شتي وبأساليب
+                    متنوعة، حيث أنه في المدى القريب من المفترض أن يكون قادراً على الإتفاق الذاتي دون حاجة الموارد خارجية، بل وتحقيق فائض
+                    يعود بالنفع على الفئات المستهدفة، والمجتمع ككل.
+                </p>
+                </div>
                 </div>
             </div>
-                    <!-- Madinat End -->
+        </div>
+    <!-- Madinat End -->
 
     <!-- Footer Start -->
     <div class="container-fluid bg-dark text-white-50 footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
