--- a/objectives.html
+++ b/objectives.html
@@ -88,6 +88,7 @@
                         <div class="dropdown-menu m-0">
                             <a href="album.html" class="dropdown-item">البوم الصور </a>
                             <a href="#" class="dropdown-item">الفديوهات</a>
+                            <a href="blog.html" class="dropdown-item">الاخبار</a>
                         </div>
                     </div>
                     <div class="nav-item dropdown">
