--- a/blog.html
+++ b/blog.html
@@ -91,7 +91,8 @@
                         <div class="dropdown-menu m-0">
                             <a href="album.html" class="dropdown-item">البوم الصور </a>
                             <a href="#" class="dropdown-item">الفديوهات</a>
-                            <a href="blog.html" class="dropdown-item">الأخبار</a>
+                            <a href="blog.html" class="dropdown-item">الاخبار</a>
+                            <a href="blog-2.html" class="dropdown-item">2الاخبار</a>
                         </div>
                     </div>
                     <div class="nav-item dropdown">
@@ -125,128 +126,94 @@
     </div>
     <!-- Navbar End -->
 
-
     <!-- Page Header Start -->
-    <div class="container-fluid page-header-album mb-5 wow fadeIn" data-wow-delay="0.1s">
+    <div class="container-fluid page-header-objectives mb-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container text-center" style="direction: ltr;">
-            <h1 class="display-4 text-white animated slideInDown mb-4"> صور مبادرة كرتونة الخير </h1>
+            <h1 class="display-4 text-white animated slideInDown mb-4"> أهداف الجمعية</h1>
             <nav aria-label="breadcrumb animated slideInDown">
                 <ol class="breadcrumb justify-content-center mb-0">
-                    <li class="breadcrumb-item text-primary active" aria-current="page"> صور المبادرات</li>
-                    <li class="breadcrumb-item"><a class="text-white" href="#">البوم صور</a></li>
-                    <li class="breadcrumb-item"><a class="text-white" href="#">المركز الاعلامى</a></li>
+                    <li class="breadcrumb-item text-primary active" aria-current="page"> أهداف الجمعية</li>
+                    <li class="breadcrumb-item"><a class="text-white" href="#">من نحن</a></li>
+                    <li class="breadcrumb-item"><a class="text-white" href="#">الرئيسية</a></li>
                 </ol>
             </nav>
         </div>
     </div>
     <!-- Page Header End -->
 
-    <!-- Training Start -->
-    <div class="container-fluid training overflow-hidden bg-light py-5">
+    <!-- Blog Start -->
+    <div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s">
         <div class="container py-5">
-            <div class="section-title text-center mb-5 wow fadeInUp" data-wow-delay="0.1s">
-                <div class="sub-style">
-                    <h5 class="sub-title text-primary px-3">ملفات الصورة للمبادرات و المشروعات</h5>
-                </div>
-                <!-- <h1 class="display-5 mb-4"></h1>
-                <p class="mb-0"></p> -->
+            <div class="section-title text-center position-relative pb-3 mb-5 mx-auto" style="max-width: 600px;">
+                <h1 class="d-inline-block rounded-pill bg-secondary text-center text-primary py-1 px-3 mb-3"> اخر الأخبار</h1>
+                <h1 class="mb-0"></h1>
             </div>
-            <div class="row g-4">
-                <div class="col-lg-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.1s">
-                    <div class="training-item">
-                        <div class="training-inner">
-                            <img src="img/images/كرتونة-الخير/WhatsApp Image 2024-12-30 at 6.23.13 AM.jpeg" class="img-fluid w-100 rounded" alt="Image">
-                            <!-- <div class="training-title-name">
-                                <a href="#" class="h4 text-white mb-0">IELTS</a>
-                                <a href="#" class="h4 text-white mb-0">Coaching</a>
-                            </div> -->
+            <div class="row g-5">
+                <div class="col-lg-4 wow slideInUp" data-wow-delay="0.3s">
+                    <div class="blog-item bg-light rounded overflow-hidden">
+                        <div class="blog-img position-relative overflow-hidden">
+                            <img class="img-fluid" src="img/images/blog/img_2396 (1).jpg" alt="">
+                            <!-- <a class="position-absolute top-0 start-0 bg-primary text-white rounded-end mt-5 py-2 px-4"href="">Web Design</a> -->
                         </div>
-                        <div class="training-content bg-primary2 rounded-bottom p-4">
-                            <a href="#">
-                                <h4 class="text-white">كرتونة الخير</h4>
-                            </a>
-                            <p class="text-white-51">
-                                مشاركة الشيخ احمد ترك فى مبادرة كرتونة الخير
+                        <div class="p-4">
+                            <div class="d-flex mb-3">
+                                <small class="me-3"><i class="far fa-user text-primary me-2"></i> مسؤال الاول </small>
+                                <small><i class="far fa-calendar-alt text-primary me-2"></i> 01 Jan, 2025 </small>
+                            </div>
+                            <h4 class="mb-3">اتحاد القوى المدنية</h4>
+                            <p>
+                                فى حفل بهيج بفندق دار حرس الحدود أحتفل مجلس أمناء أتحاد القوى المدنية لمنظمات المجتمع المدنى للعمل العام وتنمية المجتمع
+                                برئاسة فضيلة الدكتور الشيخ أحمد ترك الرئيس التنفيذى لدعم الاسر الفقيرة والمهمشة وبحضور معالى الوزير اللواء طارق مهدى
+                                قائد أركان قوات الدفاع الجوى عضو المجلس العسكرى ومحافظ الاسكندرية الاسبق وعضو مجلس أمناء أتحاد القوى المدنية
                             </p>
-                            <a class="btn btn-primary rounded-pill text-white p-2" href="photo-kirtunat-alkhayr.html"> البوم صور المبادرة <i class="fa fa-arrow-left"></i></a>
+                            <a class="text-uppercase" href=""> أقراء المزيد <i class="bi bi-arrow-left"></i></a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 wow slideInUp" data-wow-delay="0.6s">
+                    <div class="blog-item bg-light rounded overflow-hidden">
+                        <div class="blog-img position-relative overflow-hidden">
+                            <img class="img-fluid" src="img/images/ehtfalat/35875426-29c0-4c2d-b83d-fe67919aa408.jpg" alt="">
+                           <!--  <a class="position-absolute top-0 start-0 bg-primary text-white rounded-end mt-5 py-2 px-4" href="">Web Design</a> -->
+                        </div>
+                        <div class="p-4">
+                            <div class="d-flex mb-3">
+                                <small class="me-3"><i class="far fa-user text-primary me-2"></i> المسوال الاول </small>
+                                <small><i class="far fa-calendar-alt text-primary me-2"></i>01 Jan, 2045</small>
+                            </div>
+                            <h4 class="mb-3">How to build a website</h4>
+                            <p>Dolor et eos labore stet justo sed est sed sed sed dolor stet amet</p>
+                            <a class="text-uppercase" href="">Read More <i class="bi bi-arrow-right"></i></a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 wow slideInUp" data-wow-delay="0.9s">
+                    <div class="blog-item bg-light rounded overflow-hidden">
+                        <div class="blog-img position-relative overflow-hidden">
+                            <img class="img-fluid" src="img/images/ehtfalat/4adde165-815b-446c-8cdb-6de47ffe2ee8.jpg" alt="">
+                           <!--  <a class="position-absolute top-0 start-0 bg-primary text-white rounded-end mt-5 py-2 px-4" href="">Web Design</a> -->
+                        </div>
+                        <div class="p-4">
+                            <div class="d-flex mb-3">
+                                <small class="me-3"><i class="far fa-user text-primary me-2"></i> المسؤال الاول </small>
+                                <small><i class="far fa-calendar-alt text-primary me-2"></i> 01 Jan, 2045 </small>
+                            </div>
+                            <h4 class="mb-3">How to build a website</h4>
+                            <p>Dolor et eos labore stet justo sed est sed sed sed dolor stet amet</p>
+                            <a class="text-uppercase" href="">Read More <i class="bi bi-arrow-right"></i></a>
                         </div>
                     </div>
                 </div>
                 
-                <!-- <div class="col-lg-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.3s">
-                    <div class="training-item">
-                        <div class="training-inner">
-                            <img src="img/training-2.jpg" class="img-fluid w-100 rounded" alt="Image">
-                            <div class="training-title-name">
-                                <a href="#" class="h4 text-white mb-0">TOEFL</a>
-                                <a href="#" class="h4 text-white mb-0">Coaching</a>
-                            </div>
-                        </div>
-                        <div class="training-content bg-secondary rounded-bottom p-4">
-                            <a href="#">
-                                <h4 class="text-white">TOEFL Coaching</h4>
-                            </a>
-                            <p class="text-white-50">Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem,
-                                veritatis.</p>
-                            <a class="btn btn-secondary rounded-pill text-white p-0" href="#">Read More <i
-                                    class="fa fa-arrow-right"></i></a>
-                        </div>
-                    </div>
-                </div> -->
-
-                <!-- <div class="col-lg-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.5s">
-                    <div class="training-item">
-                        <div class="training-inner">
-                            <img src="img/training-3.jpg" class="img-fluid w-100 rounded" alt="Image">
-                            <div class="training-title-name">
-                                <a href="#" class="h4 text-white mb-0">PTE</a>
-                                <a href="#" class="h4 text-white mb-0">Coaching</a>
-                            </div>
-                        </div>
-                        <div class="training-content bg-secondary rounded-bottom p-4">
-                            <a href="#">
-                                <h4 class="text-white">PTE Coaching</h4>
-                            </a>
-                            <p class="text-white-50">Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem,
-                                veritatis.</p>
-                            <a class="btn btn-secondary rounded-pill text-white p-0" href="#">Read More <i
-                                    class="fa fa-arrow-right"></i></a>
-                        </div>
-                    </div>
-                </div> -->
-                
-                <!-- <div class="col-lg-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.7s">
-                    <div class="training-item">
-                        <div class="training-inner">
-                            <img src="img/training-4.jpg" class="img-fluid w-100 rounded" alt="Image">
-                            <div class="training-title-name">
-                                <a href="#" class="h4 text-white mb-0">OET</a>
-                                <a href="#" class="h4 text-white mb-0">Coaching</a>
-                            </div>
-                        </div>
-                        <div class="training-content bg-secondary rounded-bottom p-4">
-                            <a href="#">
-                                <h4 class="text-white">OET Coaching</h4>
-                            </a>
-                            <p class="text-white-50">Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem,
-                                veritatis.</p>
-                            <a class="btn btn-secondary rounded-pill text-white p-0" href="#">Read More <i
-                                    class="fa fa-arrow-right"></i></a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 text-center">
-                    <a class="btn btn-primary border-secondary rounded-pill py-3 px-5 wow fadeInUp" data-wow-delay="0.1s"
-                        href="#">View More</a>
-                </div> -->
-
             </div>
         </div>
     </div>
-    <!-- Training End -->
+    <!-- Blog Start -->
 
 <!-- Footer Start -->
-<div class="container-fluid bg-dark text-white-50 footer pt-5 wow fadeIn" data-wow-delay="0.1s">
+<div class="container-fluid bg-dark text-white-50 footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
     <div class="container py-5">
         <div class="row g-5">
             <div class="col-lg-3 col-md-6">
@@ -312,16 +279,11 @@
 </div>
 <!-- Footer End -->
 
-
 <!-- Back to Top -->
-<a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"
-        style="color: #040000;;"></i></a>
-
-
+<a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
 
 
 <!-- JavaScript Libraries -->
-<script src="lib/counterup/counterup.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
 <script src="lib/wow/wow.min.js"></script>
@@ -330,21 +292,9 @@
 <script src="lib/owlcarousel/owl.carousel.min.js"></script>
 <script src="lib/parallax/parallax.min.js"></script>
 
-<!-- JavaScript Libraries 2 -->
-<script src="agency-lib/agency-wow/wow.min.js"></script>
-<script src="agency-lib/agency-easing/easing.min.js"></script>
-<script src="agency-lib/agency-waypoints/waypoints.min.js"></script>
-<script src="agency-lib/agency-owlcarousel/owl.carousel.min.js"></script>
-<script src="agency-lib/agency-isotope/isotope.pkgd.min.js"></script>
-<script src="agency-lib/agency-lightbox/js/lightbox.min.js"></script>
-<!-- End JavaScript Libraries 2 -->
-
-
-
 <!-- Template Javascript -->
-<script src="agency-js/agency-main.js"></script>
-<script src="js/count.js"></script>
 <script src="js/main.js"></script>
+
 </body>
 
 </html>
