Add page blog-aitihad-alqiwaa

--- a/blog.html
+++ b/blog.html
@@ -166,7 +166,7 @@
                                 برئاسة فضيلة الدكتور الشيخ أحمد ترك الرئيس التنفيذى لدعم الاسر الفقيرة والمهمشة وبحضور معالى الوزير اللواء طارق مهدى
                                 قائد أركان قوات الدفاع الجوى عضو المجلس العسكرى ومحافظ الاسكندرية الاسبق وعضو مجلس أمناء أتحاد القوى المدنية
                             </p>
-                            <a class="text-uppercase" href=""> أقراء المزيد <i class="bi bi-arrow-left"></i></a>
+                            <a class="text-uppercase" href="blog-aitihad-alqiwaa.html"> أقراء المزيد <i class="bi bi-arrow-left"></i></a>
                         </div>
                     </div>
                 </div>
