--- a/blog-2.html
+++ b/blog-2.html
@@ -161,7 +161,7 @@
                             </a>
                         </div>
                         <div class="blog_details">
-                            <a class="d-inline-block" href="blog_details.html">
+                            <a class="d-inline-block" href="blog-aitihad-alqiwaa.html">
                                 <h2 class="blog-head" style="color: #2d2d2d;">
                                     اتحاد القوى المدنية
                                 </h2>
