add content us page

--- a/blog-aitihad-alqiwaa.html
+++ b/blog-aitihad-alqiwaa.html
@@ -126,24 +126,25 @@
     </div>
     <!-- Navbar End -->
 
-    <!-- Page Header Start -->
-    <div class="container-fluid page-header-objectives mb-5 wow fadeIn" data-wow-delay="0.1s">
-        <div class="container text-center" style="direction: ltr;">
-            <h1 class="display-4 text-white animated slideInDown mb-4"> أهداف الجمعية</h1>
-            <nav aria-label="breadcrumb animated slideInDown">
-                <ol class="breadcrumb justify-content-center mb-0">
-                    <li class="breadcrumb-item text-primary active" aria-current="page"> أهداف الجمعية</li>
-                    <li class="breadcrumb-item"><a class="text-white" href="#">من نحن</a></li>
-                    <li class="breadcrumb-item"><a class="text-white" href="#">الرئيسية</a></li>
-                </ol>
-            </nav>
-        </div>
+<!-- Page Header Start -->
+<div class="container-fluid page-header-blog mb-5 wow fadeIn" data-wow-delay="0.1s">
+    <div class="container text-center" style="direction: ltr;">
+        <h1 class="display-4 text-white animated slideInDown mb-4"> الاخبار</h1>
+        <nav aria-label="breadcrumb animated slideInDown">
+            <ol class="breadcrumb justify-content-center mb-0">
+                <li class="breadcrumb-item text-primary active" aria-current="page">الاخبار</li>
+                <li class="breadcrumb-item"><a class="text-white" href="#"> المركز الاعلامى</a></li>
+                <li class="breadcrumb-item"><a class="text-white" href="#">الصفحة الرئيسية</a></li>
+            </ol>
+        </nav>
     </div>
-    <!-- Page Header End -->
+</div>
+<!-- Page Header End -->
+
 
     <!-- Blog Area Start-->
     <div class="section-title text-center position-relative pb-3 mb-5 mx-auto" style="max-width: 600px;">
-        <h1 class="d-inline-block rounded-pill bg-secondary text-center text-primary py-0 px-3 mb-3"> اخر الأخبار</h1>
+        <h1 class="d-inline-block rounded-pill bg-secondary text-center text-primary py-0 px-3 mb-3"> الأخبار</h1>
         <h1 class="mb-0"></h1>
     </div>
 
@@ -289,7 +290,7 @@
                         <aside class="single_sidebar_widget popular_post_widget">
                             <h3 class="widget_title" style="color: #2d2d2d;">Recent Post</h3>
                             <div class="media post_item">
-                                <img src="img/images/Recent Post/img_2396 (1).png" alt="post">
+                                <img class="img-fluid" src="img/images/Recent Post/img_2396 (1).png" alt="post">
                                 <div class="media-body">
                                     <a href="blog_details.html">
                                         <h3 style="color: #2d2d2d;">From life was you fish...</h3>
@@ -298,7 +299,7 @@
                                 </div>
                             </div>
                             <div class="media post_item">
-                                <img src="img/images/Recent Post/0865cd63-eb41-4bda-afcb-a0fcbd40ce96.png" alt="post">
+                                <img class="img-fluid" src="img/images/Recent Post/0865cd63-eb41-4bda-afcb-a0fcbd40ce96.png" alt="post">
                                 <div class="media-body">
                                     <a href="blog_details.html">
                                         <h3 style="color: #2d2d2d;">The Amazing Hubble</h3>
@@ -307,7 +308,7 @@
                                 </div>
                             </div>
                             <div class="media post_item">
-                                <img src="img/images/Recent Post/35875426-29c0-4c2d-b83d-fe67919aa408.png" alt="post">
+                                <img class="img-fluid" src="img/images/Recent Post/35875426-29c0-4c2d-b83d-fe67919aa408.png" alt="post">
                                 <div class="media-body">
                                     <a href="blog_details.html">
                                         <h3 style="color: #2d2d2d;">Astronomy Or Astrology</h3>
@@ -316,7 +317,7 @@
                                 </div>
                             </div>
                             <div class="media post_item">
-                                <img src="img/images/Recent Post/d15331e2-ab82-4c3d-810c-6206bf6afe6e.png" alt="post">
+                                <img class="img-fluid" src="img/images/Recent Post/d15331e2-ab82-4c3d-810c-6206bf6afe6e.png" alt="post">
                                 <div class="media-body">
                                     <a href="blog_details.html">
                                         <h3 style="color: #2d2d2d;">Asteroids telescope</h3>
@@ -391,17 +392,7 @@
                                 </li>
                             </ul>
                         </aside>
-                        <aside class="single_sidebar_widget newsletter_widget">
-                            <h4 class="widget_title" style="color: #2d2d2d;">Newsletter</h4>
-                            <form action="#">
-                                <div class="form-group">
-                                    <input type="email" class="form-control" onfocus="this.placeholder = ''"
-                                        onblur="this.placeholder = 'Enter email'" placeholder='Enter email' required>
-                                </div>
-                                <button class="button rounded-0 primary-bg text-white w-100 btn_1 boxed-btn"
-                                    type="submit">Subscribe</button>
-                            </form>
-                        </aside>
+                        
                     </div>
                 </div>
             </div>
