--- a/blog.html
+++ b/blog.html
@@ -92,7 +92,6 @@
                             <a href="album.html" class="dropdown-item">البوم الصور </a>
                             <a href="#" class="dropdown-item">الفديوهات</a>
                             <a href="blog.html" class="dropdown-item">الاخبار</a>
-                            <a href="blog-2.html" class="dropdown-item">2الاخبار</a>
                         </div>
                     </div>
                     <div class="nav-item dropdown">
@@ -127,14 +126,14 @@
     <!-- Navbar End -->
 
     <!-- Page Header Start -->
-    <div class="container-fluid page-header-objectives mb-5 wow fadeIn" data-wow-delay="0.1s">
+    <div class="container-fluid page-header-blog mb-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container text-center" style="direction: ltr;">
-            <h1 class="display-4 text-white animated slideInDown mb-4"> أهداف الجمعية</h1>
+            <h1 class="display-4 text-white animated slideInDown mb-4"> الاخبار</h1>
             <nav aria-label="breadcrumb animated slideInDown">
                 <ol class="breadcrumb justify-content-center mb-0">
-                    <li class="breadcrumb-item text-primary active" aria-current="page"> أهداف الجمعية</li>
-                    <li class="breadcrumb-item"><a class="text-white" href="#">من نحن</a></li>
-                    <li class="breadcrumb-item"><a class="text-white" href="#">الرئيسية</a></li>
+                    <li class="breadcrumb-item text-primary active" aria-current="page">الاخبار</li>
+                    <li class="breadcrumb-item"><a class="text-white" href="#"> المركز الاعلامى</a></li>
+                    <li class="breadcrumb-item"><a class="text-white" href="#">الصفحة الرئيسية</a></li>
                 </ol>
             </nav>
         </div>
@@ -180,11 +179,11 @@
                         <div class="p-4">
                             <div class="d-flex mb-3">
                                 <small class="me-3"><i class="far fa-user text-primary me-2"></i> المسوال الاول </small>
-                                <small><i class="far fa-calendar-alt text-primary me-2"></i>01 Jan, 2045</small>
+                                <small><i class="far fa-calendar-alt text-primary me-2"></i> 01 Jan, 2045 </small>
                             </div>
                             <h4 class="mb-3">How to build a website</h4>
                             <p>Dolor et eos labore stet justo sed est sed sed sed dolor stet amet</p>
-                            <a class="text-uppercase" href="">Read More <i class="bi bi-arrow-right"></i></a>
+                            <a class="text-uppercase" href=""> أقراء المزيد <i class="bi bi-arrow-left"></i></a>
                         </div>
                     </div>
                 </div>
@@ -202,7 +201,7 @@
                             </div>
                             <h4 class="mb-3">How to build a website</h4>
                             <p>Dolor et eos labore stet justo sed est sed sed sed dolor stet amet</p>
-                            <a class="text-uppercase" href="">Read More <i class="bi bi-arrow-right"></i></a>
+                            <a class="text-uppercase" href=""> أقراء المزيد <i class="bi bi-arrow-left"></i></a>
                         </div>
                     </div>
                 </div>
