--- a/Projects.html
+++ b/Projects.html
@@ -91,7 +91,7 @@
                         <div class="dropdown-menu m-0">
                             <a href="album.html" class="dropdown-item">البوم الصور </a>
                             <a href="#" class="dropdown-item">الفديوهات</a>
-                            <a href="blog.html" class="dropdown-item">الاخبار</a>
+                            <a href="blog.html" class="dropdown-item">الأخبار</a>
                         </div>
                     </div>
                     <div class="nav-item dropdown">
@@ -125,91 +125,166 @@
     </div>
     <!-- Navbar End -->
 
+
     <!-- Page Header Start -->
-    <div class="container-fluid page-header-blog mb-5 wow fadeIn" data-wow-delay="0.1s">
+    <div class="container-fluid page-header-madinat mb-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container text-center" style="direction: ltr;">
-            <h1 class="display-4 text-white animated slideInDown mb-4"> الاخبار</h1>
+            <h1 class="display-4 text-white animated slideInDown mb-4"> مشروع مدينة الخير</h1>
             <nav aria-label="breadcrumb animated slideInDown">
                 <ol class="breadcrumb justify-content-center mb-0">
-                    <li class="breadcrumb-item text-primary active" aria-current="page">الاخبار</li>
-                    <li class="breadcrumb-item"><a class="text-white" href="#"> المركز الاعلامى</a></li>
-                    <li class="breadcrumb-item"><a class="text-white" href="#">الصفحة الرئيسية</a></li>
+                    <li class="breadcrumb-item text-primary active" aria-current="page"> مدينة الخير </li>
+                    <li class="breadcrumb-item"><a class="text-white" href="#">حالات تحتاج إلى مشاركتك بالمال</a></li>
+                    <li class="breadcrumb-item"><a class="text-white" href="#">مشروعات</a></li>
                 </ol>
             </nav>
         </div>
     </div>
     <!-- Page Header End -->
 
-    <!-- Blog Start -->
-    <div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s">
+    <!-- Causes Start -->
+    <div class="container-xxl bg-light my-5 py-5">
         <div class="container py-5">
-            <div class="section-title text-center position-relative pb-3 mb-5 mx-auto" style="max-width: 600px;">
-                <h1 class="d-inline-block rounded-pill bg-secondary text-center text-primary py-1 px-3 mb-3"> اخر الأخبار</h1>
-                <h1 class="mb-0"></h1>
+            <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
+                <div class="d-inline-block rounded-pill bg-secondary text-primary py-1 px-3 mb-3">أنشطة جمعية مهندسى البترول
+                    والتعدين والغاز</div>
+                <h4 class="mb-5">
+                    حالات تحتاج إلى مشاركتك بالمال (صدقات أو زكاة) كما يمكنك أيضًا التبرع بالمساعدة لأحد الحالات أو أكثر من
+                    حالة.
+                </h4>
             </div>
-            <div class="row g-5">
-                <div class="col-lg-4 wow slideInUp" data-wow-delay="0.3s">
-                    <div class="blog-item bg-light rounded overflow-hidden">
-                        <div class="blog-img position-relative overflow-hidden">
-                            <img class="img-fluid" src="img/images/blog/img_2396 (1).jpg" alt="">
-                            <!-- <a class="position-absolute top-0 start-0 bg-primary text-white rounded-end mt-5 py-2 px-4"href="">Web Design</a> -->
-                        </div>
-                        <div class="p-4">
-                            <div class="d-flex mb-3">
-                                <small class="me-3"><i class="far fa-user text-primary me-2"></i> مسؤال الاول </small>
-                                <small><i class="far fa-calendar-alt text-primary me-2"></i> 01 Jan, 2025 </small>
+            <div class="row g-4 justify-content-center">
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                    <div
+                        class="causes-item d-flex flex-column bg-white border-top border-5 border-primary rounded-top overflow-hidden h-100">
+                        <div class="text-center p-4 pt-0">
+                            <div class="d-inline-block bg-primary text-white rounded-bottom fs-5 pb-1 px-3 mb-4">
+                                <small> مشروع مدينة الخير</small>
                             </div>
-                            <h4 class="mb-3">اتحاد القوى المدنية</h4>
+                            <h5 class="mb-3" style="
+                                                background-color: #ededed;
+                                                margin: 0px;
+                                                padding: 10px;
+                                                border-radius: 9px;">
+                                مشروع إنشاء مجمعات صناعية تشمل العديد من المجالات الحرفية
+                            </h5>
+                            <p></p>
+                            <div class="causes-progress bg-light p-3 pt-2">
+                                <div class="d-flex justify-content-between">
+                                    <p class="text-dark">£1,000,000 <small class="text-body">الهدف</small></p>
+                                    <p class="text-dark">£0 <small class="text-body">تم توفير</small></p>
+                                </div>
+                                <div class="progress">
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0"
+                                        aria-valuemax="100">
+                                        <span>0%</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="position-relative mt-auto">
+                            <img class="img-fluid" src="img/images/activte/2024-638553628873905114-390.jpeg" alt="">
+                            <div class="causes-overlay">
+                                <a class="btn btn-outline-primary" href="madinat-alkhayr.html">
+                                    أقراء المزيد
+                                    <div class="d-inline-flex btn-sm-square bg-primary text-white rounded-circle ms-2">
+                                        <i class="fa fa-arrow-left"></i>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+                    <div
+                        class="causes-item d-flex flex-column bg-white border-top border-5 border-primary rounded-top overflow-hidden h-100">
+                        <div class="text-center p-4 pt-0">
+                            <div class="d-inline-block bg-primary text-white rounded-bottom fs-5 pb-1 px-3 mb-4">
+                                <small>دار ضيافة</small>
+                            </div>
+                            <h5 class="mb-3" style="
+                                                background-color: #ededed;
+                                                margin: 0px;
+                                                padding: 10px;
+                                                border-radius: 9px;">
+                                دار ضيافة
+                            </h5>
                             <p>
-                                فى حفل بهيج بفندق دار حرس الحدود أحتفل مجلس أمناء أتحاد القوى المدنية لمنظمات المجتمع المدنى للعمل العام وتنمية المجتمع
-                                برئاسة فضيلة الدكتور الشيخ أحمد ترك الرئيس التنفيذى لدعم الاسر الفقيرة والمهمشة وبحضور معالى الوزير اللواء طارق مهدى
-                                قائد أركان قوات الدفاع الجوى عضو المجلس العسكرى ومحافظ الاسكندرية الاسبق وعضو مجلس أمناء أتحاد القوى المدنية
+                                <i class="fa fa-check-circle me-2"></i> إقامة مجانية
+                                <i class="fa fa-check-circle me-2"></i> تقديم الوجبات اليومية
+                                <i class="fa fa-check-circle me-2"></i> إقامة مرافق
                             </p>
-                            <a class="text-uppercase" href="blog-aitihad-alqiwaa.html"> أقراء المزيد <i class="bi bi-arrow-left"></i></a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-4 wow slideInUp" data-wow-delay="0.6s">
-                    <div class="blog-item bg-light rounded overflow-hidden">
-                        <div class="blog-img position-relative overflow-hidden">
-                            <img class="img-fluid" src="img/images/ehtfalat/35875426-29c0-4c2d-b83d-fe67919aa408.jpg" alt="">
-                           <!--  <a class="position-absolute top-0 start-0 bg-primary text-white rounded-end mt-5 py-2 px-4" href="">Web Design</a> -->
-                        </div>
-                        <div class="p-4">
-                            <div class="d-flex mb-3">
-                                <small class="me-3"><i class="far fa-user text-primary me-2"></i> المسوال الاول </small>
-                                <small><i class="far fa-calendar-alt text-primary me-2"></i> 01 Jan, 2045 </small>
+                            <div class="causes-progress bg-light p-3 pt-2">
+                                <div class="d-flex justify-content-between">
+                                    <p class="text-dark">£10,000 <small class="text-body">الهدف</small></p>
+                                    <p class="text-dark">£9,542 <small class="text-body">تم توفير</small></p>
+                                </div>
+                                <div class="progress">
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
+                                        aria-valuemax="100">
+                                        <span>70%</span>
+                                    </div>
+                                </div>
                             </div>
-                            <h4 class="mb-3">How to build a website</h4>
-                            <p>Dolor et eos labore stet justo sed est sed sed sed dolor stet amet</p>
-                            <a class="text-uppercase" href=""> أقراء المزيد <i class="bi bi-arrow-left"></i></a>
                         </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-4 wow slideInUp" data-wow-delay="0.9s">
-                    <div class="blog-item bg-light rounded overflow-hidden">
-                        <div class="blog-img position-relative overflow-hidden">
-                            <img class="img-fluid" src="img/images/ehtfalat/4adde165-815b-446c-8cdb-6de47ffe2ee8.jpg" alt="">
-                           <!--  <a class="position-absolute top-0 start-0 bg-primary text-white rounded-end mt-5 py-2 px-4" href="">Web Design</a> -->
-                        </div>
-                        <div class="p-4">
-                            <div class="d-flex mb-3">
-                                <small class="me-3"><i class="far fa-user text-primary me-2"></i> المسؤال الاول </small>
-                                <small><i class="far fa-calendar-alt text-primary me-2"></i> 01 Jan, 2045 </small>
+                        <div class="position-relative mt-auto">
+                            <img class="img-fluid" src="img/images/activte/20230215125851.jpg" alt="">
+                            <div class="causes-overlay">
+                                <a class="btn btn-outline-primary" href="">
+                                    اقراء المزيد
+                                    <div class="d-inline-flex btn-sm-square bg-primary text-white rounded-circle ms-2">
+                                        <i class="fa fa-arrow-left"></i>
+                                    </div>
+                                </a>
                             </div>
-                            <h4 class="mb-3">How to build a website</h4>
-                            <p>Dolor et eos labore stet justo sed est sed sed sed dolor stet amet</p>
-                            <a class="text-uppercase" href=""> أقراء المزيد <i class="bi bi-arrow-left"></i></a>
                         </div>
                     </div>
                 </div>
-                
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
+                    <div
+                        class="causes-item d-flex flex-column bg-white border-top border-5 border-primary rounded-top overflow-hidden h-100">
+                        <div class="text-center p-4 pt-0">
+                            <div class="d-inline-block bg-primary text-white rounded-bottom fs-5 pb-1 px-3 mb-4">
+                                <small>كفالات أسر المرضى</small>
+                            </div>
+                            <h5 class="mb-3" style="
+                                                background-color: #ededed;
+                                                margin: 0px;
+                                                padding: 10px;
+                                                border-radius: 9px;">
+                                كفالات أسر المرضى
+                            </h5>
+                            <p>تقديم خدمة تكاملية للمرضى وتسعى لتحسين الحياة</p>
+                            <div class="causes-progress bg-light p-3 pt-2">
+                                <div class="d-flex justify-content-between">
+                                    <p class="text-dark">$10,000 <small class="text-body">الهدف</small></p>
+                                    <p class="text-dark">$9,542 <small class="text-body">تم توفير</small></p>
+                                </div>
+                                <div class="progress">
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0"
+                                        aria-valuemax="100">
+                                        <span>90%</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="position-relative mt-auto">
+                            <img class="img-fluid" src="img/images/activte/20230215130257.jpg" alt="">
+                            <div class="causes-overlay">
+                                <a class="btn btn-outline-primary" href="">
+                                    أقراء المزيد
+                                    <div class="d-inline-flex btn-sm-square bg-primary text-white rounded-circle ms-2">
+                                        <i class="fa fa-arrow-left"></i>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-    <!-- Blog Start -->
+    <!-- Causes End -->
+
 
 <!-- Footer Start -->
 <div class="container-fluid bg-dark text-white-50 footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
@@ -270,8 +345,8 @@
                     &copy; <a href="#">جمعية مهندسى البترول والتعدين والغاز</a>, كل الحقوق محفوظة.
                 </div>
                 <!--  <div class="col-md-6 text-center text-md-end">
-                            Designed By <a href="#"></a>
-                        </div> -->
+                                Designed By <a href="#"></a>
+                            </div> -->
             </div>
         </div>
     </div>
