--- a/madinat-alkhayr.html
+++ b/madinat-alkhayr.html
@@ -97,7 +97,7 @@
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">المساعدات</a>
                         <div class="dropdown-menu m-0">
-                            <a href="#" class="dropdown-item"> المشروعات</a>
+                            <a href="Projects.html" class="dropdown-item"> المشروعات</a>
                             <a href="#" class="dropdown-item">المبادرات</a>
                         </div>
                     </div>
